# Fireboy-And-Watergirl-In-The-Ice-Temple

./: .gitignore  CMakeLists.txt  README.md  convert.py  files.cmake
PTSD/include/: config.hpp
PTSD/src/Core/: Context.cpp
PTSD/src/Util/: Input.cpp
Resources/levels/: level0.json  level1.json  level2.json  level21.json  level4.json  level6.json  level7.json  test_map.json
Resources/reference/fireboy_and_watergirl_3/: SOURCE.md
Resources/reference/fireboy_and_watergirl_3/atlasses/: GroundAssets.json
Resources/shaders/: Base.frag  Base.vert
Resources/sprites/: font_play.json
include/: App.hpp  AtlasSprite.hpp  Character.hpp  CollisionSystem.hpp  Door.hpp  Element.hpp  GroundState.hpp  LevelDefinition.hpp  LevelLoader.hpp  LevelManager.hpp  LevelParser.hpp  Levels.hpp  Overlay.hpp  SpriteAtlas.hpp
include/GeneralGameObject/: Character.hpp  Door.hpp  Overlay.hpp
include/Input/: IInputController.hpp  KeyboardInputController.hpp
include/Level/: LevelDefinition.hpp  LevelManager.hpp  Levels.hpp
include/Mechanics/: Activator.hpp  BaseMechanism.hpp  Block.hpp  Button.hpp  Diamond.hpp  Elevator.hpp  Lever.hpp  Receiver.hpp  TimedButton.hpp  TriggerMediator.hpp
include/Scene/: CoverScene.hpp  GameScene.hpp  IScene.hpp  MapScene.hpp
src/: App.cpp  AtlasSprite.cpp  Character.cpp  CollisionSystem.cpp  Door.cpp  LevelLoader.cpp  LevelManager.cpp  LevelParser.cpp  Overlay.cpp  SpriteAtlas.cpp  main.cpp
src/GeneralGameObject/: Character.cpp  Diamond.cpp  Door.cpp  Overlay.cpp
src/Input/: KeyboardInputController.cpp
src/Level/: LevelLoader.cpp  LevelManager.cpp
src/Mechanics/: Block.cpp  Button.cpp  Diamond.cpp  Elevator.cpp  Lever.cpp  TimedButton.cpp  TriggerMediator.cpp
src/Scene/: CoverScene.cpp  GameScene.cpp  MapScene.cpp
